--- a/themes/parsa-hugo/assets/css/style.css
+++ b/themes/parsa-hugo/assets/css/style.css
@@ -98,13 +98,13 @@ h6, .h6 {
 }
 
 .btn-primary {
-  background: #ff6f00;
+  background: #0587a1;
   color: #fff;
   border: 0;
 }
 
 .btn-primary:active {
-  background: #ff6f00 !important;
+  background: #0587a1 !important;
 }
 
 .btn-primary:hover {
@@ -129,7 +129,7 @@ h6, .h6 {
 }
 
 .btn-transparent {
-  color: #ff6f00;
+  color: #0587a1;
   border: 0;
 }
 
@@ -178,7 +178,7 @@ body {
   height: 16px;
   top: 12px;
   left: 15px;
-  background: #ff6f00;
+  background: #0587a1;
   border-radius: 50%;
   -webkit-transform: translateX(0);
           transform: translateX(0);
@@ -201,7 +201,7 @@ body {
   width: 16px;
   height: 16px;
   margin-left: 16px;
-  background: #ff6f00;
+  background: #0587a1;
   border-radius: 50%;
 }
 
@@ -264,10 +264,10 @@ select:focus {
 }
 
 a:hover {
-  color: #ff6f00;
+  color: #0587a1;
 }
 a.text-dark:hover {
-  color: #ff6f00 !important;
+  color: #0587a1 !important;
 }
 
 .slick-slide {
@@ -330,15 +330,15 @@ a.text-dark:hover {
 }
 
 .bg-primary {
-  background: #ff6f00 !important;
+  background: #0587a1 !important;
 }
 
 .bg-secondary {
-  background: #fdefe6 !important;
+  background: #43a6ba !important;
 }
 
 .text-primary {
-  color: #ff6f00 !important;
+  color: #0587a1 !important;
 }
 
 .text-color {
@@ -410,7 +410,7 @@ a.text-dark:hover {
 .form-control:focus {
   outline: 0;
   box-shadow: none;
-  border-color: #ff6f00;
+  border-color: #0587a1;
 }
 
 textarea.form-control {
@@ -509,7 +509,7 @@ textarea.form-control {
 
 .navbar .dropdown-item:active {
   color: #fff;
-  background-color: #ff6f00;
+  background-color: #0587a1;
 }
 
 .search-icon {
@@ -646,7 +646,7 @@ textarea.form-control {
 }
 
 .instagram-post ul a:hover {
-  color: #ff6f00 !important;
+  color: #0587a1 !important;
 }
 
 .instagram-post:hover::before {
@@ -662,7 +662,7 @@ textarea.form-control {
 /* homepage 2 */
 .hero-section {
   padding: 70px 0 0;
-  background-image: linear-gradient(#fff 45%, #fdefe6 0);
+  background-image: linear-gradient(#fff 45%, #43a6ba 0);
 }
 
 .dividers {
@@ -802,7 +802,7 @@ textarea.form-control {
 blockquote {
   font-style: italic;
   color: #000000;
-  background: #fdefe6;
+  background: #43a6ba;
   padding: 20px;
   font-weight: 600;
 }
@@ -850,7 +850,7 @@ blockquote {
 }
 
 .tag-list li a:hover {
-  color: #ff6f00;
+  color: #0587a1;
 }
 .instagram-slider{
   height: 200px;
