--- a/themes/parsa-hugo/assets/css/style.css
+++ b/themes/parsa-hugo/assets/css/style.css
@@ -24,6 +24,24 @@ body {
   color: #585757;
 }
 
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
 p, .paragraph {
   font-weight: 400;
   font-size: 15px;
