--- a/themes/parsa-hugo/layouts/partials/header.html
+++ b/themes/parsa-hugo/layouts/partials/header.html
@@ -39,8 +39,8 @@
 
 
 </header>
-<div class="logo">
+<div>
 <a href="{{ site.BaseURL }}" style="display: block">
-<img  src="{{ site.Params.logo_main | absURL }}" alt="{{site.Title}}">
+<img  src="{{ site.Params.logo_main | absURL }}" alt="{{site.Title}}" class="logo">
 </a>
 </div>
