--- a/themes/parsa-hugo/assets/css/style.css
+++ b/themes/parsa-hugo/assets/css/style.css
@@ -42,8 +42,12 @@ body {
 }
 
 .logo {
-  text-align: center;
   padding: 10px 50px 20px;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 p, .paragraph {
