--- a/themes/parsa-hugo/layouts/_default/single.html
+++ b/themes/parsa-hugo/layouts/_default/single.html
@@ -34,6 +34,9 @@
 </section>
 <!-- /blog single -->
 
+{{ partial "disqus.html" . }}
+
+
 <!-- regular page -->
 {{ else }}
 <section class="section">
