--- a/themes/parsa-hugo/layouts/_default/contact.html
+++ b/themes/parsa-hugo/layouts/_default/contact.html
@@ -3,7 +3,7 @@
 <section class="section">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12">
+      <div class="col-sm-12">
         <h2 class="mb-4">{{.Title }}</h2>
         <img src="{{.Params.Image | absURL }}" alt="{{site.Params.author}}" class="img-fluid w-100 mb-4">
         {{ .Content }}
@@ -25,7 +25,5 @@
     </div>
   </div>
 </section>
-
-{{partial "instafeed.html" . }}
 
 {{ end }}
