--- a/themes/parsa-hugo/layouts/_default/search.html
+++ b/themes/parsa-hugo/layouts/_default/search.html
@@ -4,7 +4,7 @@
 <section class="section bg-secondary">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12">
+      <div class="col-sm-12">
         <h4>{{.Title}}</h4>
       </div>
     </div>
