--- a/themes/parsa-hugo/layouts/_default/single.html
+++ b/themes/parsa-hugo/layouts/_default/single.html
@@ -7,7 +7,7 @@
 <section class="section bg-secondary">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12">
+      <div class="col-sm-12">
         <h4>{{ .Title }}</h4>
       </div>
     </div>
@@ -19,7 +19,7 @@
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-lg-8">
+      <div class="col-sm-8">
         <ul class="list-inline d-flex justify-content-between py-3">
           <li class="list-inline-item"><i class="ti-user mr-2"></i>Post by {{site.Params.author}}</li>
           <li class="list-inline-item"><i class="ti-calendar mr-2"></i>{{ .PublishDate.Format "Jan 02, 2006" }}</li>
@@ -34,7 +34,6 @@
 </section>
 <!-- /blog single -->
 
-{{ partial "disqus.html" . }}
 
 
 <!-- regular page -->
@@ -42,7 +41,7 @@
 <section class="section">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12">
+      <div class="col-sm-12">
         <h2 class="mb-4">{{.Title }}</h2>
         {{with .Params.image}}<img src="{{. | absURL }}" alt="{{site.Params.author}}" class="img-fluid w-100 mb-4">{{end}}
         <div class="content">{{ .Content }}</div>
