--- a/themes/parsa-hugo/layouts/partials/gallery.html
+++ b/themes/parsa-hugo/layouts/partials/gallery.html
@@ -1,5 +1,6 @@
 {{ if .Params.gallery }}
 
+<script src="/plugins/blueimp/blueimp-gallery.min.js"></script>
 
 <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
     <div class="slides"></div>
