--- a/themes/parsa-hugo/layouts/_default/single.html
+++ b/themes/parsa-hugo/layouts/_default/single.html
@@ -32,12 +32,24 @@
         {{ partial "gallery.html" . }}
 
         <script>
-        blueimp.Gallery(
-        document.getElementById('links').getElementsByTagName('a'),{
-            container: '#blueimp-gallery-carousel',
-            carousel: true
-        });
-        </script>
+  document.getElementById('links').onclick = function (event) {
+    event = event || window.event
+    var target = event.target || event.srcElement
+    var link = target.src ? target.parentNode : target
+    var options = { index: link, event: event }
+    var links = this.getElementsByTagName('a')
+    blueimp.Gallery(links, options)
+  }
+</script>
+
+<script>
+  blueimp.Gallery(document.getElementById('links').getElementsByTagName('a'), {
+    container: '#blueimp-gallery-carousel',
+    carousel: true
+  })
+</script>
+
+
         {{ end }}
         </div>
       </div>
