--- a/themes/parsa-hugo/layouts/_default/contact.html
+++ b/themes/parsa-hugo/layouts/_default/contact.html
@@ -5,9 +5,10 @@
     <div class="row">
       <div class="col-sm-12">
         <h2 class="mb-4">{{.Title }}</h2>
-        <img src="{{.Params.Image | absURL }}" alt="{{site.Params.author}}" class="img-fluid w-100 mb-4">
+        
         {{ .Content }}
-        <form action="{{ site.Params.contact_form_action }}" class="row mt-5">
+
+        <form name="contact" method="POST" data-netlify="true" class="row mt-5">
           <div class="col-lg-6">
             <input type="text" class="form-control mb-4" name="name" id="name" placeholder="Name">
           </div>
