--- a/themes/parsa-hugo/layouts/partials/head.html
+++ b/themes/parsa-hugo/layouts/partials/head.html
@@ -2,6 +2,10 @@
   <meta charset="utf-8">
   <title>{{ site.Title }}</title>
 
+    {{ range .AlternativeOutputFormats -}}
+    {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+    {{ end -}}
+
   {{ "<!-- mobile responsive meta -->" | safeHTML }}
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with site.Params.description }}{{ . }}{{ end }}{{ end }}">
