--- a/themes/parsa-hugo/layouts/_default/single.html
+++ b/themes/parsa-hugo/layouts/_default/single.html
@@ -31,6 +31,7 @@
         {{ if .Params.gallery }}
         {{ partial "gallery.html" . }}
         {{ end }}
+        {{partial "socialsharing.html" . }}
         {{partial "disqus.html" . }}
         </div>
       </div>
